payment.html: had Visa in all caps.
All caps won't work with the shopping cart.  It needs to be 'Visa'.
Fixed this.

--- a/payment.html
+++ b/payment.html
@@ -35,7 +35,7 @@
         <td>
           <select id="cardType">
             <option disabled='disabled'>- Please select a card type -</option>
-            <option value="VISA">VISA</option>
+            <option value="Visa">Visa</option>
             <option value="MasterCard">MasterCard</option>
             <option value="Discover">Discover Card</option>
             <option value="Diners Club">Diner's Club</option>
