updated the thumbnail urls to fix some 404 images

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             {{#each items}}
             <tr>
               <td>
-                {{#with metaData}}{{#if defaultImageUrl}}<img class='order-item-thumbnail' src="{{defaultImageUrl}}"
+                {{#with metaData}}{{#if defaultImageUrl}}<img class='order-item-thumbnail' src="https://secure.ultracart.com/thumbs/{{defaultImageUrl}}"
                                                               alt=''/>{{/if}}{{/with}}
               </td>
               <td><a href="{{#with metaData}}{{viewUrl}}{{/with}}">{{description}}</a></td>
