--- a/orders.html
+++ b/orders.html
@@ -140,7 +140,7 @@
         {{#each items}}
         <tr>
           <td>
-            {{#with metaData}}{{#if defaultImageUrl}}<img class='order-item-thumbnail' src="{{defaultImageUrl}}" alt=''/>{{/if}}{{/with}}
+            {{#with metaData}}{{#if defaultImageUrl}}<img class='order-item-thumbnail' src="https://secure.ultracart.com/thumbs/{{defaultImageUrl}}" alt=''/>{{/if}}{{/with}}
           </td>
           <td><a href="{{#with metaData}}{{viewUrl}}{{/with}}">{{description}}</a></td>
         </tr>
