--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <span class="error"></span>
         </div>
 
-        <div id='login-form'>
+        <form id='login-form'>
           <strong>Login</strong> to access your account
           <div class='login-form-row'><label for="email">Email Address:</label>
             <input type="text" id="email" size="30" class='login-field'/>
@@ -116,8 +116,8 @@
             <button type="submit" value="Login" id="login-button" class='login-button'>Login</button>
             <input type="button" value="Email Password" id="email-password-button" class='login-button'>Email Password</button>
           </div>
-        </div>
-        <div id='register-form'>
+        </form>
+        <form id='register-form'>
           <strong>Register</strong> to create a new Account
           <div class='register-form-row'><label for="email">Email Address:</label>
             <input type="text" id="register-email" size="30" class='register-field'/>
@@ -134,7 +134,7 @@
           <div class='register-form-row'>
             <button type="submit" value="Register" id="register-button" class='register-button'>Register</button>
           </div>
-        </div>
+        </form>
         <div style='clear:both'></div>
 
         <div id='recent-activity'></div>
